--- a/css/banner.css
+++ b/css/banner.css
@@ -1,26 +1,49 @@
 @import url(font-awesome.min.css);
-
 .center-outer {
     width: 100%;
     height: 100%;
-    }
-    
-    .center-inner {
+}
+
+.center-inner {
     vertical-align: middle;
     text-align: center;
-    }
-    
+}
 
-    .bubbles {
+.bubbles {
     font-family: arial;
     position: relative;
-    }
-    
-    .individual-bubble {
+}
+
+.individual-bubble {
     position: absolute;
     border-radius: 100%;
     bottom: 10px;
     background-color: #fff;
     z-index: 1;
-    }
-    
+}
+
+.cart-index {
+    display: flex;
+    z-index: 999;
+    width: 50px;
+    height: 50px;
+    background-color: rgb(19, 152, 19, 0.6);
+    backdrop-filter: blur(10px);
+    border-radius: 4px;
+    position: sticky;
+    top: 100px;
+    margin-left: 10px;
+    box-shadow: 0px 0px 10px 1px #000000ee;
+}
+
+.cart-index a {
+    width: 100%;
+    height: 100%;
+}
+
+.cart-index a ion-icon {
+    padding: 10px;
+    width: 30px;
+    height: 30px;
+    color: #fff;
+}
