--- a/css/search.css
+++ b/css/search.css
@@ -1,109 +1,82 @@
-@import url(font-awesome.min.css);
+.search {
+    margin: 20px 0;
+    width: 300px;
+    height: 50px;
+    z-index: 998;
+    position: sticky;
+    top: 100px;
+}
 
-.search-box {
-    width: fit-content;
-    height: fit-content;
+.contain-search {
+    width: 300px;
+    vertical-align: middle;
+    white-space: nowrap;
     position: relative;
 }
 
-.input-search {
-    height: 25px;
-    width: 25px;
-    border-style: none;
-    padding: 5px;
-    font-size: 18px;
-    letter-spacing: 2px;
-    outline: none;
-    border-radius: 25px;
-    transition: all .5s ease-in-out;
-    padding-right: 40px;
-    color: #fff;
-    margin-left: -15px;
-    background-color: transparent;
+.contain-search input#search {
+    width: 300px;
+    height: 50px;
+    background: #2b303b;
+    border: none;
+    font-size: 10pt;
+    float: left;
+    color: white;
+    padding-left: 45px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    -webkit-transition: all .55s ease;
+    -moz-transition: all .55s ease;
+    -ms-transition: all .55s ease;
+    -o-transition: all .55s ease;
+    transition: all .55s ease;
 }
 
-.input-search::placeholder {
-    color: rgba(255, 255, 255, .5);
-    font-size: 18px;
-    letter-spacing: 2px;
-    font-weight: 100;
+.contain-search input#search::-webkit-input-placeholder {
+    color: #65737e;
 }
 
-.btn-search {
-    width: 30px;
-    height: 30px;
-    border-style: none;
-    font-size: 20px;
-    font-weight: bold;
-    outline: none;
-    cursor: pointer;
-    border-radius: 50%;
+.contain-search input#search:-moz-placeholder {
+    /* Firefox 18- */
+    color: #65737e;
+}
+
+.contain-search input#search::-moz-placeholder {
+    /* Firefox 19+ */
+    color: #65737e;
+}
+
+.contain-search input#search:-ms-input-placeholder {
+    color: #65737e;
+}
+
+.contain-search .icon {
     position: absolute;
-    right: 0px;
-    background-color: transparent;
-    pointer-events: painted;
-}
-.btn-search ion-icon{
-    color: #fff;
-    width: 25px;
-    height: 25px;
-    margin-bottom: 3px;
+    top: 50%;
+    margin-left: 17px;
+    margin-top: 17px;
+    z-index: 1;
+    color: #4f5b66;
 }
 
-.btn-search ion-icon:hover{
-    color: #48ca95;
-    width: 25px;
-    height: 25px;
-    margin-bottom: 3px;
+@media screen and (max-width: 1023px) {
+    .search {
+        margin: 20px 30px;
+    }
 }
 
-.btn-search:focus~.input-search {
-    width: 300px;
-    border-radius: 0px;
-    background-color: transparent;
-    border-bottom: 1px solid rgba(255, 255, 255, .5);
-    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+@media screen and (max-width: 767px) {
+    .search {
+        margin: 20px 50px;
+    }
 }
 
-.input-search:focus {
-    font-family: 'Poppins', sans-serif;
-    width: 300px;
-    border-radius: 0px;
-    background-color: transparent;
-    border-bottom: 1px solid rgba(255, 255, 255, .5);
-    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-}
-@media only screen and (max-width: 1023px) {
-    .btn-search:focus~.input-search {
-        width: 200px;
-        border-radius: 0px;
-        background-color: transparent;
-        border-bottom: 1px solid rgba(255, 255, 255, .5);
-        transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+@media screen and (max-width: 375px) {
+    .search {
+        margin: 20px 50px;
     }
-    .input-search:focus {
-        font-family: 'Poppins', sans-serif;
-        width: 200px;
-        border-radius: 0px;
-        background-color: transparent;
-        border-bottom: 1px solid rgba(255, 255, 255, .5);
-        transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-    }
-}
-@media only screen and (max-width: 767px) {
-    .btn-search:focus~.input-search {
-        width: 190px;
-        border-radius: 0px;
-        background-color: transparent;
-        border-bottom: 1px solid rgba(255, 255, 255, .5);
-        transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-    }
-    .input-search:focus {
-        font-family: 'Poppins', sans-serif;
-        width: 190px;
-        border-radius: 0px;
-        background-color: transparent;
-        border-bottom: 1px solid rgba(255, 255, 255, .5);
-        transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+    .contain-search input#search {
+        width: 240px;
     }
 }
