--- a/css/chitiettheloai.css
+++ b/css/chitiettheloai.css
@@ -17,7 +17,7 @@
     padding: 10px;
 }
 
-.filter-title ion-icon {
+#control .filter-title ion-icon {
     position: absolute;
     width: 30px;
     height: 30px;
@@ -26,7 +26,7 @@
     margin-left: 5px;
 }
 
-.filter-title h1 {
+#control .filter-title h1 {
     font-size: 20px;
     font-weight: bold;
     color: white;
@@ -43,7 +43,11 @@
     background-color: rgb(184, 183, 183);
     border-radius: 5px;
     margin: 0 auto;
-    overflow: hidden;
+}
+
+.filter-itemss {
+    max-height: 465px;
+    overflow: auto;
 }
 
 .filter-item {
@@ -51,8 +55,47 @@
     padding: 10px;
 }
 
+.filter-item ion-icon {
+    color: white;
+}
+
 .item-title {
     display: grid;
+}
+
+.item-title label {
+    color: white;
+}
+
+.categorys {
+    display: none;
+}
+
+#category .filter-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#category .filter-title ion-icon {
+    width: 30px;
+    height: 30px;
+    color: white;
+    left: 0;
+    margin-left: 5px;
+}
+
+#category .filter-title h1 {
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+}
+
+#category .filter-title button {
+    width: 90px;
+    padding: 5px;
+    font-size: 15px;
+    border-radius: 5px;
 }
 
 .item-title span {
@@ -64,8 +107,25 @@
     justify-content: space-between;
     width: 100%;
     border: 2px solid #eee;
+    border-radius: 5px;
     cursor: pointer;
     align-items: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.items::before {
+    position: absolute;
+    content: "";
+    width: 0;
+    height: 100%;
+    background-color: rgba(231, 22, 22, 0.712);
+    transform: translateX(-10px);
+    transition: 0.25s;
+}
+
+.items::before:hover {
+    width: 100%;
 }
 
 .filter-btn {
