--- a/css/chitiettheloai.css
+++ b/css/chitiettheloai.css
@@ -4,29 +4,118 @@
     box-sizing: border-box;
 }
 
-.filter-form {
-    margin: 10rem 2rem;
-    color: #eee;
+.form-top {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    top: 100px;
+    left: 0;
+    right: 0;
+    gap: 10px;
+    background-color: rgb(21, 27, 81);
+    padding: 0 20px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    z-index: 999;
 }
 
-.filter-title {
-    background-color: rgb(184, 183, 183);
-    height: 50px;
-    text-align: center;
+.form-bottom {
+    margin-top: 20%;
+}
+
+
+/* range */
+
+.group {
+    background-color: #CBC2B9;
+    width: 100%;
+    margin: 20px 0;
+    height: 10px;
+    border-radius: 5px;
+    box-shadow: inset 0 1px 2px #9d968f;
     position: relative;
-    padding: 10px;
 }
 
-#control .filter-title ion-icon {
+.range-input input {
+    -webkit-appearance: none;
+    position: absolute;
+    width: 100%;
+    height: 5px;
+    margin: 0;
+    background-color: transparent;
+    transform: translateY(2px);
+    pointer-events: none;
+}
+
+.range-input input::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 17px;
+    height: 17px;
+    background-color: #fbfb71;
+    border: 3px solid #f7a14c;
+    border-radius: 50%;
+    box-shadow: inset 0 1px 2px #6f9163, 0 0 1px #6f9163;
+    pointer-events: auto;
+}
+
+.progress {
+    position: absolute;
+    height: 100%;
+    left: 0;
+    right: 0;
+    background-color: goldenrod;
+    border-radius: 5px;
+    background-attachment: fixed;
+}
+
+.range-text div {
+    position: absolute;
+    background-color: #bffaaa80;
+    color: #eee;
+    font-size: 10px;
+    padding: 5px;
+    left: 0;
+    width: 50px;
+    text-align: center;
+    border-radius: 3px;
+    top: 15px;
+    transform: translateX(-50%);
+}
+
+.range-text .text-max {
+    left: unset;
+    right: 0;
+    transform: translateX(50%);
+}
+
+
+/* ragne */
+
+.filter-form {
+    margin: 7rem 2rem;
+    color: #eee;
+    position: relative;
+}
+
+.filter-title-coltrol {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    position: relative;
+}
+
+.filter-title-coltrol ion-icon {
     position: absolute;
     width: 30px;
     height: 30px;
     color: white;
     left: 0;
-    margin-left: 5px;
+    top: 0;
+    margin: 10px 5px;
 }
 
-#control .filter-title h1 {
+.filter-title-coltrol h1 {
     font-size: 20px;
     font-weight: bold;
     color: white;
@@ -38,16 +127,21 @@
 }
 
 .filter-control {
+    position: fixed;
+    margin-top: -10%;
+    transform: translateX(50%);
     width: 50%;
-    height: 100%;
+    box-shadow: rgba(0, 0, 0, 0.619) 0px 5px 15px;
     background-color: rgb(184, 183, 183);
-    border-radius: 5px;
-    margin: 0 auto;
+    border-radius: 10px;
+    z-index: 999;
 }
 
 .filter-itemss {
     max-height: 465px;
     overflow: auto;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .filter-item {
@@ -67,17 +161,18 @@
     color: white;
 }
 
-.categorys {
+.hidden {
     display: none;
 }
 
-#category .filter-title {
+.filter-title-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 5px;
 }
 
-#category .filter-title ion-icon {
+.filter-title-item ion-icon {
     width: 30px;
     height: 30px;
     color: white;
@@ -85,13 +180,13 @@
     margin-left: 5px;
 }
 
-#category .filter-title h1 {
+.filter-title-item h1 {
     font-size: 20px;
     font-weight: bold;
     color: white;
 }
 
-#category .filter-title button {
+.filter-title-item button {
     width: 90px;
     padding: 5px;
     font-size: 15px;
@@ -100,6 +195,15 @@
 
 .item-title span {
     color: goldenrod;
+}
+
+.lable-item {
+    width: 100%;
+}
+
+.tools ion-icon,
+span {
+    color: #eee;
 }
 
 .items {
@@ -140,4 +244,22 @@
     font-size: 15px;
     margin-left: 10px;
     border-radius: 5px;
+}
+
+.btn:hover {
+    background-color: goldenrod;
+}
+
+.control {
+    border-radius: 5px;
+    width: 60px;
+    height: 50px;
+    background-color: #9d968f;
+    cursor: pointer;
+}
+
+.tools {
+    text-align: center;
+    padding: 10px 5px;
+    font-size: 15px;
 }
