--- a/css/style.css
+++ b/css/style.css
@@ -401,8 +401,9 @@ ul.btn li:last-child {
 .header.scrolled {
     width: 100%;
     padding: 5px 30px;
-    background: linear-gradient(to right, #25aae1, #bf6df3, #d031de, #8e27bb);
-    box-shadow: 0 4px 15px 0 rgba(244, 98, 198, 0.75);
+    /* background: linear-gradient(to right, #25aae1, #bf6df3, #d031de, #8e27bb);
+    box-shadow: 0 4px 15px 0 rgba(244, 98, 198, 0.75); */
+    background-color: ;
     position: absolute;
     z-index: 999;
 }
