--- a/css/click_slider.css
+++ b/css/click_slider.css
@@ -28,6 +28,7 @@ input {
 
 button {
     cursor: pointer;
+    display: none;
 }
 
 .image-slider {
@@ -69,8 +70,6 @@ button {
     transform: translateY(-50%);
     border: none;
     border-radius: 15px;
-    width: 50px;
-    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
