--- a/css/chitietsp.css
+++ b/css/chitietsp.css
@@ -17,13 +17,136 @@
     --text-color: hsl(0, 0%, 91%);
 }
 
+
+/* content-product */
+
+.content-product {
+    margin-top: 5rem;
+    display: flex;
+    justify-content: center;
+    column-gap: 1rem;
+}
+
+
+/* tabs */
+
+.column {
+    float: left;
+    width: 25%;
+    padding: 10px;
+}
+
+.column img {
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+.column img:hover {
+    opacity: 1;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.container-tab {
+    position: relative;
+    display: none;
+}
+
+
+/* tabs*/
+
+
+/* information */
+
+.content-info {
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5rem;
+    min-height: 500px;
+}
+
+.content-info a {
+    background: var(--main-color);
+    color: white;
+    padding: 3px;
+}
+
+.medium-star {
+    color: #faf102;
+    background: rgb(113, 112, 112);
+    width: 50px;
+    padding: 5px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.sale {
+    background: rgb(21, 187, 57);
+    width: 50px;
+    padding: 5px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.info-price {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.info-price h2 {
+    color: rgb(21, 187, 57);
+}
+
+.info-price span {
+    color: gray;
+    text-decoration: line-through
+}
+
+.infor-btn {
+    margin-top: 1rem;
+}
+
+.infor-btn a {
+    background: var(--main-color);
+    color: var(--text-color);
+    padding: 12px 20px;
+    letter-spacing: 1px;
+    font-weight: bold;
+    border-radius: 4px;
+}
+
+.infor-btn a:hover {
+    background: var(--light-color);
+    color: var(--main-color);
+    transition: .3s all linear;
+}
+
+
+/* information */
+
+
+/* content-product */
+
+
+/* video trailer */
+
 .video-container video {
+    margin-top: 1rem;
     width: 100%;
     aspect-ratio: 16/9;
 }
 
-.video-container {
-    margin-top: 5rem;
+.video-container h2 {
+    display: inline-flex;
+    font-size: 1.4rem;
+    font-weight: bold;
+    border-bottom: 4px solid var(--main-color);
 }
 
 .about {
@@ -41,4 +164,140 @@
     font-size: 0.938rem;
     margin-top: 1rem;
     text-align: justify;
+}
+
+
+/* phiên bản mở rộng */
+
+.extend {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.extend h2 {
+    display: inline-flex;
+    font-size: 1.4rem;
+    font-weight: bold;
+    border-bottom: 4px solid var(--main-color);
+}
+
+.extend-content {
+    margin-top: 1rem;
+    padding: 0.2rem 1rem 1rem 0.5rem;
+    background: rgba(85, 85, 85, 0.758);
+    border-radius: 5px;
+}
+
+.extend-content label {
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #fa6902;
+    padding-bottom: 0.5rem;
+}
+
+.extend-content p {
+    margin-bottom: 0.5rem;
+}
+
+.extend-price {
+    display: flex;
+    column-gap: 2rem;
+    align-items: baseline;
+    padding-bottom: 0.5rem;
+}
+
+.ext-sale {}
+
+.sale {}
+
+.ext-price-new {
+    color: rgb(21, 187, 57);
+}
+
+.ext-price-old {
+    color: gray;
+    text-decoration: line-through
+}
+
+
+/* đánh giá và bình luận */
+
+.rate-and-cmt {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.rate-and-cmt h2 {
+    display: inline-flex;
+    font-size: 1.4rem;
+    font-weight: bold;
+    border-bottom: 4px solid var(--main-color);
+}
+
+.tab-cmt-bottom {
+    border-top: 2px solid goldenrod;
+}
+
+.product-bottom-inputbtn {
+    display: flex;
+}
+
+.tab-cmt-display {
+    padding: 10px;
+    margin-bottom: 20px;
+    height: 200px;
+    max-height: 200px;
+    overflow: auto;
+}
+
+.tab-user-cmt {
+    padding-bottom: 10px;
+}
+
+.cmt-user-name span {
+    font-size: 20px;
+    font-weight: bold;
+    color: #fa6902;
+}
+
+.cmt-date span {
+    font-size: 12px;
+    color: gray;
+}
+
+.cmt-content span {
+    font-size: 15px;
+}
+
+.tab-cmt-input {
+    margin: 20px;
+    width: 80%;
+}
+
+.tab-cmt-input textarea {
+    resize: none;
+    width: 100%;
+    height: 100px;
+}
+
+.tab-cmt-btn {
+    display: flex;
+    align-items: center;
+    width: 20%;
+}
+
+.tab-cmt-btn a {
+    background: var(--main-color);
+    color: var(--text-color);
+    padding: 12px 20px;
+    letter-spacing: 1px;
+    font-weight: bold;
+    border-radius: 4px;
+}
+
+.tab-cmt-btn a:hover {
+    background: var(--light-color);
+    color: var(--main-color);
+    transition: .3s all linear;
 }
