--- a/css/Index2.css
+++ b/css/Index2.css
@@ -455,6 +455,24 @@ header {
     transition: .3s all linear;
 }
 
+.image .box-text-category {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: calc(100% / 2);
+    padding: 10px;
+    background: hsl(277, 14%, 20%, 0.8);
+    backdrop-filter: blur(10px);
+}
+
+.image .box-text-category h2 {
+    font-size: 2rem;
+    font-weight: 500;
+    text-align: center;
+    text-transform: uppercase;
+}
+
 .coppyright {
     display: flex;
     justify-content: space-between;
