--- a/css/Index2.css
+++ b/css/Index2.css
@@ -471,6 +471,7 @@ header {
     font-weight: 500;
     text-align: center;
     text-transform: uppercase;
+    margin-top: 50px;
 }
 
 .coppyright {
