--- a/css/chitietsp.css
+++ b/css/chitietsp.css
@@ -24,21 +24,53 @@
     margin-top: 5rem;
     display: flex;
     justify-content: center;
+    flex-direction: row-reverse;
     column-gap: 1rem;
 }
 
 
 /* tabs */
 
+.row {
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+}
+
 .column {
     float: left;
+    padding: 5px;
     width: 25%;
-    padding: 10px;
+    flex-shrink: 0;
+    scroll-snap-align: start;
+}
+
+.row::-webkit-scrollbar {
+    height: 10px;
+}
+
+.row::-webkit-scrollbar-track {
+    background: var(--light-color);
+    border-radius: 10px;
+}
+
+.row::-webkit-scrollbar-thumb {
+    background-color: #fa8383;
+    width: 5px;
+    border-radius: 10px;
+}
+
+.row::-webkit-scrollbar-thumb:hover {
+    background: var(--main-color);
 }
 
 .column img {
     opacity: 0.8;
     cursor: pointer;
+    object-fit: cover;
+    display: block;
+    width: 100%;
+    height: auto;
 }
 
 .column img:hover {
@@ -207,10 +239,6 @@
     padding-bottom: 0.5rem;
 }
 
-.ext-sale {}
-
-.sale {}
-
 .ext-price-new {
     color: rgb(21, 187, 57);
 }
@@ -300,4 +328,80 @@
     background: var(--light-color);
     color: var(--main-color);
     transition: .3s all linear;
+}
+
+@media screen and (max-width: 1024px) {
+    .container {
+        margin: 0 auto;
+        width: 90%;
+    }
+    .nav {
+        padding: 10px 0;
+    }
+    .nofication {
+        right: 3rem;
+    }
+    .search {
+        right: 3rem;
+    }
+    .menu img {
+        width: 500px;
+    }
+    .section {
+        padding: 3rem 0 2rem;
+    }
+    .content-product {
+        display: block;
+    }
+    .content-tabs,
+    .content-info,
+    .about,
+    .extend,
+    .rate-and-cmt,
+    .video-container {
+        margin-bottom: 2rem;
+    }
+    .content-info {
+        margin-top: 6rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        margin: 0 auto;
+        width: 70%;
+    }
+    .nofication {
+        right: 1rem;
+    }
+    .search {
+        right: 1rem;
+    }
+    .menu img {
+        width: 400px;
+    }
+}
+
+@media screen and (max-width: 426px) {
+    .container {
+        margin: 0 auto;
+        width: 80%;
+    }
+    .logo {
+        font-size: 1.2rem;
+    }
+    .menu img {
+        display: none;
+    }
+    .menu {
+        justify-content: flex-end;
+    }
+    .nav {
+        padding: 8px 0;
+    }
+    .nav-icons .bx,
+    .menu-icons {
+        height: 40px;
+        width: 40px;
+    }
 }
