--- a/css/quanly-admin.css
+++ b/css/quanly-admin.css
@@ -1,3 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+button:focus {
+    outline: none;
+}
+
 .admin-manager {
     display: flex;
     font-size: 13px;
