--- a/css/dangnhap.css
+++ b/css/dangnhap.css
@@ -1,22 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
+    list-style: none;
+    text-decoration: none;
+    scroll-padding-top: 2rem;
+}
+
+:root {
+    --main-color: #fa5353;
+    --dark-color: #1b182b;
+    --light-color: #322f40;
+    --text-color: hsl(0, 0%, 91%);
 }
 
 body {
-    /* font-size: 20px; */
-    padding: 20px;
-    background-image: linear-gradient(to right, #25aae1, #bf6df3, #d031de, #8e27bb);
+    color: var(--text-color);
+    background-image: url(../images/banner.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-size: 15px;
 }
 
 .login-form {
     width: 50%;
     margin: 8% auto;
-    background-color: rgb(211, 211, 211, 0.5);
     backdrop-filter: blur(10px);
     padding: 0 20px;
-    border: 2px solid white;
+    border: 5px solid var(--main-color);
     border-radius: 14px;
 }
 
@@ -39,13 +53,22 @@ body {
     height: 50px;
     padding: 0 20px;
     border-radius: 4px;
-    border: 1px solid #eee;
+    border: 2px solid #eee;
     background-color: transparent;
     transition: 0.25s ease;
+    color: var(--text-color);
 }
 
 .login-input:focus {
-    border-color: blueviolet;
+    border-color: rgb(43, 226, 226);
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-text-fill-color: #ffffff;
 }
 
 .login-lable {
@@ -62,7 +85,7 @@ body {
 .login-input:not(:placeholder-shown)+.login-lable,
 .login-input:focus+.login-lable {
     top: -15px;
-    color: blueviolet;
+    color: rgb(43, 226, 226);
     display: inline-block;
 }
 
@@ -81,7 +104,7 @@ body {
 }
 
 .item-dangky a:hover {
-    color: blueviolet;
+    color: rgb(43, 226, 226);
 }
 
 .login-btn {
@@ -89,6 +112,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 30px;
+    font-size: 15px;
 }
 
 .login-item button {
@@ -96,7 +120,7 @@ body {
     height: 50px;
     border-radius: 4px;
     outline: none;
-    border: 1px solid white;
+    border: 2px solid white;
     color: white;
     background-color: transparent;
     transition: 0.25s ease;
@@ -104,8 +128,7 @@ body {
 
 .login-item button:hover {
     transform: translateY(-5px);
-    background-image: linear-gradient(to right, #25aae1, #40e495, #30dd8a, #2bb673);
-    box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
+    background: var(--main-color);
 }
 
 .eye {
@@ -119,6 +142,19 @@ body {
 
 .hidden {
     display: none;
+}
+
+
+/* báo lỗi */
+
+.is-invalid {
+    border: 2px solid red;
+}
+
+.loi {
+    position: absolute;
+    color: red;
+    bottom: -1.5rem;
 }
 
 @media screen and (max-width: 767px) {
