--- a/css/dangnhap.css
+++ b/css/dangnhap.css
@@ -60,7 +60,7 @@ body {
 }
 
 .login-input:focus {
-    border-color: rgb(43, 226, 226);
+    border-color: rgb(21, 187, 57);
 }
 
 input:-webkit-autofill,
@@ -73,7 +73,7 @@ input:-webkit-autofill:active {
 
 .login-lable {
     position: absolute;
-    color: #eee;
+    color: #747474;
     top: 50%;
     left: 21px;
     transform: translateY(-50%);
@@ -84,8 +84,9 @@ input:-webkit-autofill:active {
 
 .login-input:not(:placeholder-shown)+.login-lable,
 .login-input:focus+.login-lable {
-    top: -15px;
-    color: rgb(43, 226, 226);
+    top: 50%;
+    left: 75%;
+    color: rgb(21, 187, 57);
     display: inline-block;
 }
 
@@ -104,7 +105,7 @@ input:-webkit-autofill:active {
 }
 
 .item-dangky a:hover {
-    color: rgb(43, 226, 226);
+    color: rgb(21, 187, 57);
 }
 
 .login-btn {
