--- a/css/thanhtoan2.css
+++ b/css/thanhtoan2.css
@@ -17,6 +17,11 @@
     --text-color: hsl(0, 0%, 91%);
 }
 
+button {
+    outline: none;
+    border: none;
+}
+
 html::-webkit-scrollbar {
     display: none;
 }
@@ -90,6 +95,7 @@ ul.breadcrumb li a:hover {
     display: flex;
     justify-content: space-between;
     column-gap: 1rem;
+    margin-bottom: 1rem;
 }
 
 .infor-customer {
