--- a/css/click_slider.css
+++ b/css/click_slider.css
@@ -51,7 +51,7 @@ button {
 .image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 12px;
 }
 
