--- a/css/Index2.css
+++ b/css/Index2.css
@@ -90,7 +90,8 @@ header {
     cursor: pointer;
 }
 
-#bell-icon {
+#bell-icon,
+#cart-icon {
     position: relative;
 }
 
@@ -103,6 +104,17 @@ header {
     position: absolute;
     top: 10px;
     right: 14px;
+}
+
+#cart-icon span {
+    content: "";
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background-color: var(--main-color);
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 
 .menu-icon {
@@ -189,10 +201,11 @@ header {
 .nofication {
     position: absolute;
     top: 110%;
-    right: 5rem;
+    right: 7rem;
     width: 300px;
     height: 350px;
     background: var(--light-color);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 0.5rem;
     padding: 1rem;
     display: flex;
@@ -285,10 +298,11 @@ header {
 .search {
     position: absolute;
     top: 110%;
-    right: 5rem;
+    right: 7rem;
     width: 300px;
     height: 70px;
     background: var(--light-color);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 0.5rem;
     padding: 1rem;
     clip-path: circle(0% at 100% 0%);
@@ -310,7 +324,7 @@ header {
     height: 40px;
     padding: 0 20px;
     border-radius: 4px;
-    border: 1px solid #eee;
+    border: 2px solid #eee;
     background-color: transparent;
     transition: 0.25s ease;
     color: white;
@@ -337,49 +351,6 @@ header {
     color: var(--main-color);
     display: inline-block;
     background-color: var(--light-color);
-}
-
-
-/* Đăng xuất */
-
-.log_out {
-    position: absolute;
-    top: 110%;
-    right: 5rem;
-    width: 300px;
-    height: 70px;
-    background: var(--light-color);
-    border-radius: 0.5rem;
-    padding: 1rem;
-    clip-path: circle(0% at 100% 0%);
-}
-
-.log__out.active {
-    clip-path: circle(144% at 100% 0%);
-    transition: .5s;
-}
-
-.logout-box {
-    display: flex;
-    align-items: baseline;
-    justify-content: space-between;
-    background: hsl(0, 0%, 100%, 0.4);
-    gap: 1rem;
-    row-gap: 1rem;
-    border-radius: 0.5rem;
-    padding: 10px;
-}
-
-.logout-box p {
-    color: var(--text-color);
-}
-
-.out .logout-box:hover {
-    background: var(--main-color);
-}
-
-.logout-box .bx {
-    color: var(--text-color);
 }
 
 
@@ -635,10 +606,10 @@ html::-webkit-scrollbar {
         width: 70%;
     }
     .nofication {
-        right: 1rem;
+        right: 6rem;
     }
     .search {
-        right: 1rem;
+        right: 6rem;
     }
     .menu img {
         width: 400px;
@@ -679,5 +650,11 @@ html::-webkit-scrollbar {
     }
     .home {
         min-height: 240px;
+    }
+    .nofication {
+        right: 0.5rem;
+    }
+    .search {
+        right: 0.5rem;
     }
 }
