--- a/css/Index2.css
+++ b/css/Index2.css
@@ -89,7 +89,8 @@ header {
 }
 
 #bell-icon,
-#cart-icon {
+#cart-icon,
+#logout-icon {
     position: relative;
 }
 
@@ -105,6 +106,17 @@ header {
 }
 
 #cart-icon span {
+    content: "";
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background-color: var(--main-color);
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+#logout-icon span {
     content: "";
     width: 5px;
     height: 5px;
