--- a/css/sanpham.css
+++ b/css/sanpham.css
@@ -193,7 +193,7 @@ ul.breadcrumb li a:hover {
 }
 
 .filter-itemss {
-    background-color: rgb(105, 105, 105);
+    background-color: var(--light-color);
     padding: 20px;
 }
 
@@ -203,7 +203,7 @@ ul.breadcrumb li a:hover {
     transform: translateX(50%);
     width: 50%;
     box-shadow: rgba(0, 0, 0, 0.619) 0px 5px 15px;
-    background-color: rgb(184, 183, 183);
+    background-color: var(--main-color);
     border-radius: 10px;
     z-index: 999;
 }
@@ -262,7 +262,7 @@ ul.breadcrumb li a:hover {
 }
 
 .btn-filter {
-    background: var(--main-color);
+    background: var(--dark-color);
     padding: 1rem;
     border-radius: 0.5rem;
     color: var(--text-color);
@@ -327,6 +327,14 @@ span {
     font-size: 15px;
     margin-left: 10px;
     border-radius: 5px;
+    background: var(--main-color);
+    color: var(--text-color);
+    transition: .5s linear;
+}
+
+.filter-item button:hover {
+    background: var(--dark-color);
+    color: var(--main-color);
 }
 
 .control {
