--- a/css/card2.css
+++ b/css/card2.css
@@ -161,9 +161,13 @@ small {
     box-shadow: 0px 0px 10px 5px #00000088;
     width: 100%;
     padding: 10px;
-    background-color: #00000099;
+    background: rgb(50, 47, 64, 0.5);
     backdrop-filter: blur(5px);
     border-radius: 5px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .title {
@@ -223,7 +227,8 @@ small {
     transform: translateY(-3px);
 }
 
-.card-button button {
+
+/* .card-button button {
     outline: none;
     border: 2px solid #eee;
     display: flex;
@@ -236,6 +241,24 @@ small {
 }
 
 .card-button button:hover {
+    background: #fa5353;
+    box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
+    transform: translateY(-3px);
+} */
+
+.add-product {
+    outline: none;
+    border: 2px solid #eee;
+    display: flex;
+    padding: 0.8em;
+    cursor: pointer;
+    border-radius: 50px;
+    transition: .3s ease-in-out;
+    color: white;
+    background: transparent;
+}
+
+.add-product:hover {
     background: #fa5353;
     box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
     transform: translateY(-3px);
