--- a/css/dangnhap.css
+++ b/css/dangnhap.css
@@ -35,11 +35,14 @@ body {
 
 .login-form {
     width: 50%;
-    margin: 8% auto;
     backdrop-filter: blur(10px);
     padding: 0 20px;
     border: 5px solid var(--main-color);
     border-radius: 14px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .login-title {
@@ -48,6 +51,17 @@ body {
     font-size: 30px;
     font-weight: bold;
     color: white;
+    position: relative;
+}
+
+.home {
+    position: absolute;
+    left: 0;
+    color: var(--text-color);
+}
+
+.home:hover {
+    color: var(--main-color);
 }
 
 .login-item {
