--- a/css/logout.css
+++ b/css/logout.css
@@ -5,15 +5,23 @@
     top: 110%;
     right: 7rem;
     width: 300px;
-    height: 70px;
+    height: 120px;
     background: var(--light-color);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 0.5rem;
     padding: 1rem;
     clip-path: circle(0% at 100% 0%);
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
 }
 
 .log-out.active {
+    clip-path: circle(144% at 100% 0%);
+    transition: .5s;
+}
+
+.log-in.active {
     clip-path: circle(144% at 100% 0%);
     transition: .5s;
 }
