--- a/css/sanpham.css
+++ b/css/sanpham.css
@@ -44,6 +44,45 @@ button {
     width: 100%;
 }
 
+.nofication1 {
+    position: absolute;
+    top: 110%;
+    right: 11rem;
+    width: 300px;
+    height: 70px;
+    background: var(--light-color);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    clip-path: circle(0% at 100% 0%);
+}
+
+.nofication1.active {
+    clip-path: circle(144% at 100% 0%);
+    transition: .5s;
+}
+
+.search1 {
+    position: absolute;
+    top: 110%;
+    right: 11rem;
+    width: 300px;
+    height: 70px;
+    background: var(--light-color);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    clip-path: circle(0% at 100% 0%);
+}
+
+.search1.active {
+    clip-path: circle(144% at 100% 0%);
+    transition: .5s;
+}
+
 
 /* Breadcrumb */
 
