--- a/css/khachhang.css
+++ b/css/khachhang.css
@@ -67,6 +67,23 @@ ul.breadcrumb li a:hover {
     backdrop-filter: blur(10px);
     padding: 0 20px;
     border-radius: 14px;
+    display: flex;
+}
+
+.left {
+    width: 100%;
+    padding: 0.5rem;
+}
+
+.right {
+    width: 100%;
+    padding: 0.5rem;
+    transition: .5s ease;
+    clip-path: circle(0% at 100% 0%);
+}
+
+.right.active {
+    clip-path: circle(144% at 100% 0%);
 }
 
 .register-input {
@@ -75,11 +92,12 @@ ul.breadcrumb li a:hover {
     height: 50px;
     padding: 0 20px;
     border-radius: 4px;
-    border: 2px solid #eee;
+    border: 2px solid var(--main-color);
     background-color: transparent;
     transition: 0.25s ease;
     color: var(--text-color);
     padding: 10px;
+    font-size: 15px;
 }
 
 .register-input:focus {
@@ -108,12 +126,34 @@ ul.breadcrumb li a:hover {
     transition: 0.25s ease;
     background: var(--dark-color);
     padding: 5px;
+    font-size: 15px;
 }
 
 .register-input:not(:placeholder-shown)+.register-lable,
 .register-input:focus+.register-lable {
     top: 0;
-    /* left: 75%; */
+    color: var(--main-color);
+    display: inline-block;
+}
+
+.register-lable2 {
+    position: absolute;
+    color: #747474;
+    top: 50%;
+    left: 21px;
+    transform: translateY(-50%);
+    user-select: none;
+    pointer-events: none;
+    transition: 0.25s ease;
+    background: var(--dark-color);
+    padding: 5px;
+    font-size: 15px;
+}
+
+.register-input:not(:placeholder-shown)+.register-lable2,
+.register-input:focus+.register-lable2 {
+    top: 0;
+    left: 65%;
     color: var(--main-color);
     display: inline-block;
 }
@@ -129,18 +169,45 @@ ul.breadcrumb li a:hover {
 }
 
 .register-item button {
-    width: 100px;
+    width: 100%;
     height: 50px;
     border-radius: 4px;
     outline: none;
-    border: 2px solid white;
+    border: 2px solid var(--main-color);
     color: white;
-    background: var(--main-color);
+    background: transparent;
     transition: 0.25s ease;
 }
 
 .register-item button:hover {
-    background: var(--light-color);
-    border-color: var(--main-color);
+    background: var(--main-color);
+    border-color: var(--text-color);
     transform: translateY(-2px);
+}
+
+.change_pass {
+    width: 100%;
+    height: 50px;
+    border-radius: 4px;
+    outline: none;
+    border: 2px solid var(--main-color);
+    color: white;
+    background: transparent;
+    transition: 0.25s ease;
+    font-size: 15px;
+}
+
+
+/* .change_pass.action {
+    clip-path: circle(144% at 100% 0%);
+} */
+
+.change_pass:hover {
+    background: var(--main-color);
+    border-color: var(--text-color);
+    transform: translateY(-2px);
+}
+
+.hidden {
+    display: none;
 }
